crates/fv/tests/it/snapshots/it__ecosystem__saleor-uv-lock-output.snap
---
source: crates/fv/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 170 packages in [TIME]
