crates/fv/tests/it/snapshots/it__ecosystem__transformers-uv-lock-output.snap
---
source: crates/fv/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 303 packages in [TIME]
